# note-cmake

clang/: CMakeLists.txt  setenv.bat
module/: CMakeLists.txt
module/modules/: CustomX.cmake  namespace_customy.cmake
start/: CMakeLists.txt
start/scope_var/: CMakeLists.txt
watcom/: CMakeLists.txt
